--- a/todo
+++ b/todo
@@ -35,3 +35,10 @@ gnl
 random
 imaginaires
 quaternions
+
+discord
+memset et memchr a opti
+strs normalement (split join)
+horrible printf au secours
+bigint printf
+printf OPTIII dlstc
